# dtqs

./: Cargo.toml  Dockerfile.api  Dockerfile.worker  README.md  cli.Dockerfile
k8s/: dtqs-api-deployment.yaml  dtqs-worker-deployment.yaml
migrations/: 03_create_logs_table.sql  04_seed_tasks_table.sql  create_tasks_table.sql  create_worker_nodes_table.sql
src/: cli_dashboard.rs  config.rs  database.rs  lib.rs  main.rs  messaging.rs  models.rs  worker.rs  worker_processing.rs  worker_scheduler.rs
src/routes/: mod.rs  sse.rs  tasks.rs
